--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "1cdf2d2c-ff3e-43b0-bf6b-28fb518447cb",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "64c902c3-3cbf-4f65-82d2-feb0294afcf3",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "6660e19e-5a2b-49d4-9752-86a51fde7149",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "4fec2174-1c15-4c9f-b73a-98975afb0529",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "292b3431-674d-4c7c-a77c-3f95646c0e0e",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "ce780432-ecbf-4f49-8c21-3656242e3276",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "e52c81c9-1d9e-4acf-848a-6881f6e4870f",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "379a8902-01b0-4dbd-972b-4f762fe409ec",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "'Sunny'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "4c00a63f-2e5b-4dee-9c34-394180c39b0f",
    "metadata": {},
    "outputs": [],
@@ -146,20 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The weather in Berlin is <strong>Sunny</strong>.\n",
-      "<span style=\"font-size:50px;\">![](http://openweathermap.org/img/wn/01d@2x.png)</span>\n",
-      "The Temperature is 18.1 degree Celcius.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_berlin1 = f'The weather in Berlin is <strong>{description_berlin}</strong>.'\n",
     "text_berlin2 = f'<span style=\"font-size:50px;\">![]({icon_berlin})</span>'\n",
@@ -168,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
    "outputs": [],
@@ -188,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "id": "d90aa547-6e5b-4b18-9261-823f10968cad",
    "metadata": {},
    "outputs": [
@@ -223,28 +213,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Berlin</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>The weather in Berlin is &lt;strong&gt;Sunny&lt;/strong&gt;.</td>\n",
+       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "      <td>The Temperature is 18.0 degree Celcius.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Brooklyn</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>The weather in Brooklyn is &lt;strong&gt;Cloudy&lt;/str...</td>\n",
+       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "      <td>The Temperature is 32.6 degree Celcius.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       city How is the weather       Temperatur\n",
-       "0    Berlin               None  None       None\n",
-       "1  Brooklyn               None  None       None"
+       "       city                                 How is the weather  \\\n",
+       "0    Berlin   The weather in Berlin is <strong>Sunny</strong>.   \n",
+       "1  Brooklyn  The weather in Brooklyn is <strong>Cloudy</str...   \n",
+       "\n",
+       "                                                      \\\n",
+       "0  <span style=\"font-size:50px;\">![](http://openw...   \n",
+       "1  <span style=\"font-size:50px;\">![](http://openw...   \n",
+       "\n",
+       "                                Temperatur  \n",
+       "0  The Temperature is 18.0 degree Celcius.  \n",
+       "1  The Temperature is 32.6 degree Celcius.  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,28 +267,16 @@
    "id": "9f8f7312-8ca2-43de-b3d9-ba7c9251c2e4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# rename columns\n",
-    "\n",
-    "(\n",
-    "    df\n",
-    "    .rename(\n",
-    "        columns={\n",
-    "            'temperature_2m': 'temperature'\n",
-    "        }, \n",
-    "        inplace=True\n",
-    "    )\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "77ab535b-53c7-4be0-bd10-ef4973ffb445",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('processed/current.csv')"
+    "df.to_csv('processed/current.csv', index=False)"
    ]
   }
  ],
