--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -146,24 +146,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_berlin1 = f'The weather in Berlin is <strong>{description_berlin}</strong>.'\n",
+    "text_berlin1 = f'<strong>{description_berlin}</strong>.'\n",
     "text_berlin2 = f'<span style=\"font-size:50px;\">![]({icon_berlin})</span>'\n",
     "text_berlin3 = f'The Temperature is {berlin_temp} degree Celcius.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_brooklyn1 = f'The weather in Brooklyn is <strong>{description_brooklyn}</strong>.'\n",
+    "text_brooklyn1 = f'<strong>{description_brooklyn}</strong>.'\n",
     "text_brooklyn2 = f'<span style=\"font-size:50px;\">![]({icon_brooklyn})</span>'\n",
     "text_brooklyn3 = f'The Temperature is {brooklyn_temp} degree Celcius.'"
    ]
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "d90aa547-6e5b-4b18-9261-823f10968cad",
    "metadata": {},
    "outputs": [
@@ -203,25 +203,28 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>How is the weather</th>\n",
-       "      <th></th>\n",
-       "      <th>Temperatur</th>\n",
+       "      <th>Field</th>\n",
+       "      <th>Berlin</th>\n",
+       "      <th>Brooklyn</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Berlin</td>\n",
-       "      <td>The weather in Berlin is &lt;strong&gt;Sunny&lt;/strong&gt;.</td>\n",
-       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
-       "      <td>The Temperature is 18.0 degree Celcius.</td>\n",
+       "      <td>How is the weather</td>\n",
+       "      <td>&lt;strong&gt;Sunny&lt;/strong&gt;.</td>\n",
+       "      <td>&lt;strong&gt;Cloudy&lt;/strong&gt;.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Brooklyn</td>\n",
-       "      <td>The weather in Brooklyn is &lt;strong&gt;Cloudy&lt;/str...</td>\n",
+       "      <td>image</td>\n",
        "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Temperatur</td>\n",
+       "      <td>The Temperature is 18.0 degree Celcius.</td>\n",
        "      <td>The Temperature is 32.6 degree Celcius.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -229,32 +232,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       city                                 How is the weather  \\\n",
-       "0    Berlin   The weather in Berlin is <strong>Sunny</strong>.   \n",
-       "1  Brooklyn  The weather in Brooklyn is <strong>Cloudy</str...   \n",
+       "                Field                                             Berlin  \\\n",
+       "0  How is the weather                            <strong>Sunny</strong>.   \n",
+       "1               image  <span style=\"font-size:50px;\">![](http://openw...   \n",
+       "2          Temperatur            The Temperature is 18.0 degree Celcius.   \n",
        "\n",
-       "                                                      \\\n",
-       "0  <span style=\"font-size:50px;\">![](http://openw...   \n",
-       "1  <span style=\"font-size:50px;\">![](http://openw...   \n",
-       "\n",
-       "                                Temperatur  \n",
-       "0  The Temperature is 18.0 degree Celcius.  \n",
-       "1  The Temperature is 32.6 degree Celcius.  "
+       "                                            Brooklyn  \n",
+       "0                           <strong>Cloudy</strong>.  \n",
+       "1  <span style=\"font-size:50px;\">![](http://openw...  \n",
+       "2            The Temperature is 32.6 degree Celcius.  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# turn dictionary into dataframe\n",
-    "\n",
     "data = {\n",
-    "    'city': ['Berlin', 'Brooklyn'],\n",
-    "    'How is the weather': [text_berlin1, text_brooklyn1],\n",
-    "    '': [text_berlin2, text_brooklyn2],\n",
-    "    'Temperatur': [text_berlin3, text_brooklyn3]\n",
+    "    'Field': ['How is the weather', 'image', 'Temperatur'],\n",
+    "    'Berlin': [text_berlin1, text_berlin2, text_berlin3],\n",
+    "    'Brooklyn': [text_brooklyn1, text_brooklyn2, text_brooklyn3]\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
@@ -263,15 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f8f7312-8ca2-43de-b3d9-ba7c9251c2e4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "77ab535b-53c7-4be0-bd10-ef4973ffb445",
    "metadata": {},
    "outputs": [],
