--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -252,8 +252,8 @@
     "# turn dictionary into dataframe\n",
     "data = {\n",
     "    'Field': ['How is the weather', 'image', 'Temperatur'],\n",
-    "    'Berlin': [text_berlin1, text_berlin2, text_berlin3],\n",
-    "    'Brooklyn': [text_brooklyn1, text_brooklyn2, text_brooklyn3]\n",
+    "    'Berlin': [text_berlin2, text_berlin3],\n",
+    "    'Brooklyn': [text_brooktext_brooklyn2, text_brooklyn3]\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
