--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -146,39 +146,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
    "outputs": [],
    "source": [
     "text_berlin1 = f'<strong>{description_berlin}</strong>.'\n",
     "text_berlin2 = f'<span style=\"font-size:50px;\">![]({icon_berlin})</span>'\n",
-    "text_berlin3 = f'The Temperature is {berlin_temp} degree Celcius.'"
+    "text_berlin3 = f'The Temperature is <strong>{berlin_temp}<strong> degree Celcius.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
    "outputs": [],
    "source": [
     "text_brooklyn1 = f'<strong>{description_brooklyn}</strong>.'\n",
     "text_brooklyn2 = f'<span style=\"font-size:50px;\">![]({icon_brooklyn})</span>'\n",
-    "text_brooklyn3 = f'The Temperature is {brooklyn_temp} degree Celcius.'"
+    "text_brooklyn3 = f'The Temperature is <strong>{brooklyn_temp}<strong> degree Celcius.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "92923d83-0759-4453-85f8-b998d7b0233e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "d90aa547-6e5b-4b18-9261-823f10968cad",
    "metadata": {},
    "outputs": [
@@ -211,39 +203,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>How is the weather</td>\n",
-       "      <td>&lt;strong&gt;Sunny&lt;/strong&gt;.</td>\n",
-       "      <td>&lt;strong&gt;Cloudy&lt;/strong&gt;.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>image</td>\n",
        "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
        "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>Temperatur</td>\n",
-       "      <td>The Temperature is 18.0 degree Celcius.</td>\n",
-       "      <td>The Temperature is 32.6 degree Celcius.</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;18.0&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;32.6&lt;strong&gt; degree...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Field                                             Berlin  \\\n",
-       "0  How is the weather                            <strong>Sunny</strong>.   \n",
-       "1               image  <span style=\"font-size:50px;\">![](http://openw...   \n",
-       "2          Temperatur            The Temperature is 18.0 degree Celcius.   \n",
+       "        Field                                             Berlin  \\\n",
+       "0       image  <span style=\"font-size:50px;\">![](http://openw...   \n",
+       "1  Temperatur  The Temperature is <strong>18.0<strong> degree...   \n",
        "\n",
        "                                            Brooklyn  \n",
-       "0                           <strong>Cloudy</strong>.  \n",
-       "1  <span style=\"font-size:50px;\">![](http://openw...  \n",
-       "2            The Temperature is 32.6 degree Celcius.  "
+       "0  <span style=\"font-size:50px;\">![](http://openw...  \n",
+       "1  The Temperature is <strong>32.6<strong> degree...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,9 +235,9 @@
    "source": [
     "# turn dictionary into dataframe\n",
     "data = {\n",
-    "    'Field': ['How is the weather', 'image', 'Temperatur'],\n",
+    "    'Field': ['image', 'Temperatur'],\n",
     "    'Berlin': [text_berlin2, text_berlin3],\n",
-    "    'Brooklyn': [text_brooktext_brooklyn2, text_brooklyn3]\n",
+    "    'Brooklyn': [text_brooklyn2, text_brooklyn3]\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
@@ -262,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "77ab535b-53c7-4be0-bd10-ef4973ffb445",
    "metadata": {},
    "outputs": [],
