--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -10,14 +10,7 @@
     "import requests \n",
     "import datetime\n",
     "import pandas as pd\n",
-    "import json\n",
-    "\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n"
+    "import json"
    ]
   },
   {
@@ -27,9 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key=os.getenv(\"WEATHERAPI_APIKEY\")\n",
-    "\n",
-    "\n",
     "response = requests.get('https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&current=temperature_2m,weather_code&timezone=auto&forecast_days=1')\n",
     "berlin = response.json()\n",
     "\n",
