--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1cdf2d2c-ff3e-43b0-bf6b-28fb518447cb",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "64c902c3-3cbf-4f65-82d2-feb0294afcf3",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6660e19e-5a2b-49d4-9752-86a51fde7149",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4fec2174-1c15-4c9f-b73a-98975afb0529",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "292b3431-674d-4c7c-a77c-3f95646c0e0e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ce780432-ecbf-4f49-8c21-3656242e3276",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e52c81c9-1d9e-4acf-848a-6881f6e4870f",
    "metadata": {},
    "outputs": [],
@@ -82,10 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "379a8902-01b0-4dbd-972b-4f762fe409ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sunny'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "description_berlin = weather_dict.get(berlin_code, {}).get('day', {}).get('description', 'Unknown')\n",
     "description_brooklyn = weather_dict.get(brooklyn_code, {}).get('day', {}).get('description', 'Unknown')\n",
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4c00a63f-2e5b-4dee-9c34-394180c39b0f",
    "metadata": {},
    "outputs": [],
@@ -105,15 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "51bc4a68-ebe2-4251-8936-e179e7385f92",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
    "outputs": [],
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
    "outputs": [],
@@ -137,10 +140,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d90aa547-6e5b-4b18-9261-823f10968cad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Field</th>\n",
+       "      <th>Berlin</th>\n",
+       "      <th>Brooklyn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>image</td>\n",
+       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Temperatur</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;17.5&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;31.7&lt;strong&gt; degree...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Field                                             Berlin  \\\n",
+       "0       image  <span style=\"font-size:50px;\">![](http://openw...   \n",
+       "1  Temperatur  The Temperature is <strong>17.5<strong> degree...   \n",
+       "\n",
+       "                                            Brooklyn  \n",
+       "0  <span style=\"font-size:50px;\">![](http://openw...  \n",
+       "1  The Temperature is <strong>31.7<strong> degree...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# turn dictionary into dataframe\n",
     "data = {\n",
@@ -155,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "77ab535b-53c7-4be0-bd10-ef4973ffb445",
    "metadata": {},
    "outputs": [],
