--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -116,10 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated f-string literal (detected at line 2) (4100634144.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mtext_berlin2 = f'<p style=\"text-align: center;\">\u001b[39m\n                   ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated f-string literal (detected at line 2)\n"
+     ]
+    }
+   ],
    "source": [
     "text_berlin1 = f'<strong>{description_berlin}</strong>.'\n",
     "text_berlin2 = f'<span style=\"font-size:50px;\">![]({icon_berlin})</span>'\n",
