--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "4c00a63f-2e5b-4dee-9c34-394180c39b0f",
    "metadata": {},
    "outputs": [],
@@ -116,19 +116,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated f-string literal (detected at line 2) (4100634144.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mtext_berlin2 = f'<p style=\"text-align: center;\">\u001b[39m\n                   ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated f-string literal (detected at line 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_berlin1 = f'<strong>{description_berlin}</strong>.'\n",
     "text_berlin2 = f'<span style=\"font-size:50px;\">![]({icon_berlin})</span>'\n",
@@ -137,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
    "outputs": [],
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "d90aa547-6e5b-4b18-9261-823f10968cad",
    "metadata": {},
    "outputs": [
@@ -206,7 +197,7 @@
        "1  The Temperature is <strong>31.7<strong> degree...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,13 +216,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "77ab535b-53c7-4be0-bd10-ef4973ffb445",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('processed/current.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "422ce79d-e4cf-41f8-b4b9-4cb3507dda27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Field</th>\n",
+       "      <th>Berlin</th>\n",
+       "      <th>Brooklyn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>image</td>\n",
+       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "      <td>&lt;span style=\"font-size:50px;\"&gt;![](http://openw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Temperatur</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;17.5&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;31.7&lt;strong&gt; degree...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Field                                             Berlin  \\\n",
+       "0       image  <span style=\"font-size:50px;\">![](http://openw...   \n",
+       "1  Temperatur  The Temperature is <strong>17.5<strong> degree...   \n",
+       "\n",
+       "                                            Brooklyn  \n",
+       "0  <span style=\"font-size:50px;\">![](http://openw...  \n",
+       "1  The Temperature is <strong>31.7<strong> degree...  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a3c3ecd-cd2a-4edc-b78f-39732902470e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7032c8a5-5e48-40d7-ab56-07787a09bcd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2b406f6-943c-4181-bd33-167254dc736c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2f6f1f9-b57a-4dac-a0de-b69a86c718c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
