--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "1cdf2d2c-ff3e-43b0-bf6b-28fb518447cb",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "64c902c3-3cbf-4f65-82d2-feb0294afcf3",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "6660e19e-5a2b-49d4-9752-86a51fde7149",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "4fec2174-1c15-4c9f-b73a-98975afb0529",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "292b3431-674d-4c7c-a77c-3f95646c0e0e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "ce780432-ecbf-4f49-8c21-3656242e3276",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "e52c81c9-1d9e-4acf-848a-6881f6e4870f",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "379a8902-01b0-4dbd-972b-4f762fe409ec",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "'Sunny'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "id": "4c00a63f-2e5b-4dee-9c34-394180c39b0f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
    "outputs": [],
@@ -128,10 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<strong>Sunny</strong>.'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_brooklyn1 = f'<strong>{description_brooklyn}</strong>.'\n",
     "text_brooklyn2 = f'<span style=\"font-size:50px;\">![]({icon_brooklyn})</span>'\n",
@@ -140,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "id": "d90aa547-6e5b-4b18-9261-823f10968cad",
    "metadata": {},
    "outputs": [
@@ -180,8 +191,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Temperatur</td>\n",
-       "      <td>The Temperature is &lt;strong&gt;17.5&lt;strong&gt; degree...</td>\n",
-       "      <td>The Temperature is &lt;strong&gt;31.7&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;17.1&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;32.1&lt;strong&gt; degree...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,14 +201,14 @@
       "text/plain": [
        "        Field                                             Berlin  \\\n",
        "0       image  <span style=\"font-size:50px;\">![](http://openw...   \n",
-       "1  Temperatur  The Temperature is <strong>17.5<strong> degree...   \n",
+       "1  Temperatur  The Temperature is <strong>17.1<strong> degree...   \n",
        "\n",
        "                                            Brooklyn  \n",
        "0  <span style=\"font-size:50px;\">![](http://openw...  \n",
-       "1  The Temperature is <strong>31.7<strong> degree...  "
+       "1  The Temperature is <strong>32.1<strong> degree...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
