--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -15,16 +15,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "id": "64c902c3-3cbf-4f65-82d2-feb0294afcf3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'latitude': 40.64453,\n",
+       " 'longitude': -73.94229,\n",
+       " 'generationtime_ms': 19.555091857910156,\n",
+       " 'utc_offset_seconds': -14400,\n",
+       " 'timezone': 'America/New_York',\n",
+       " 'timezone_abbreviation': 'GMT-4',\n",
+       " 'elevation': 19.0,\n",
+       " 'current_units': {'time': 'iso8601',\n",
+       "  'interval': 'seconds',\n",
+       "  'apparent_temperature': '°C',\n",
+       "  'temperature_2m': '°C',\n",
+       "  'weather_code': 'wmo code'},\n",
+       " 'current': {'time': '2025-06-24T14:15',\n",
+       "  'interval': 900,\n",
+       "  'apparent_temperature': 41.0,\n",
+       "  'temperature_2m': 38.4,\n",
+       "  'weather_code': 0}}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "response = requests.get('https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&current=temperature_2m,weather_code&timezone=auto&forecast_days=1')\n",
+    "response = requests.get('https://api.open-meteo.com/v1/forecast?latitude=52.52&longitude=13.41&current=apparent_temperature,temperature_2m,weather_code&timezone=auto&forecast_days=1')\n",
     "berlin = response.json()\n",
     "\n",
-    "response = requests.get('https://api.open-meteo.com/v1/forecast?latitude=40.6501&longitude=-73.9496&current=temperature_2m,weather_code&timezone=auto&forecast_days=1')\n",
-    "brooklyn = response.json()"
+    "response = requests.get('https://api.open-meteo.com/v1/forecast?latitude=40.6501&longitude=-73.9496&current=apparent_temperature,temperature_2m,weather_code&timezone=auto&forecast_days=1')\n",
+    "brooklyn = response.json()\n",
+    "brooklyn"
    ]
   },
   {
@@ -65,6 +93,37 @@
    "outputs": [],
    "source": [
     "brooklyn_code = str(brooklyn['current']['weather_code'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c63ade44-1443-40af-95c5-a43cda5cccaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.3"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "berlin_feelslike = berlin['current']['apparent_temperature']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4c87f984-b9c8-4aca-9924-5f887ab0f690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "brooklyn_feelslike = brooklyn['current']['apparent_temperature']"
    ]
   },
   {
@@ -123,30 +182,21 @@
    "source": [
     "text_berlin1 = f'<strong>{description_berlin}</strong>.'\n",
     "text_berlin2 = f'<span style=\"font-size:50px;\">![]({icon_berlin})</span>'\n",
-    "text_berlin3 = f'The Temperature is <strong>{berlin_temp}<strong> degree Celcius.'"
+    "text_berlin3 = f'The Temperature is <strong>{berlin_temp}<strong> degree Celcius.'\n",
+    "text_berlin4 = f'It feels like <strong>{berlin_feelslike}<strong> degree Celcius.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<strong>Sunny</strong>.'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_brooklyn1 = f'<strong>{description_brooklyn}</strong>.'\n",
     "text_brooklyn2 = f'<span style=\"font-size:50px;\">![]({icon_brooklyn})</span>'\n",
-    "text_brooklyn3 = f'The Temperature is <strong>{brooklyn_temp}<strong> degree Celcius.'"
+    "text_brooklyn3 = f'The Temperature is <strong>{brooklyn_temp}<strong> degree Celcius.'\n",
+    "text_brooklyn4 = f'It feels like <strong>{brooklyn_feelslike}<strong> degree Celcius.'"
    ]
   },
   {
@@ -216,9 +266,9 @@
    "source": [
     "# turn dictionary into dataframe\n",
     "data = {\n",
-    "    'Field': ['image', 'Temperatur'],\n",
-    "    'Berlin': [text_berlin2, text_berlin3],\n",
-    "    'Brooklyn': [text_brooklyn2, text_brooklyn3]\n",
+    "    'Field': ['image', 'Temperatur', \"feels_like\"],\n",
+    "    'Berlin': [text_berlin2, text_berlin3, text_berlin4],\n",
+    "    'Brooklyn': [text_brooklyn2, text_brooklyn3, text_brooklyn4]\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
