--- a/weather-current.ipynb
+++ b/weather-current.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "id": "1cdf2d2c-ff3e-43b0-bf6b-28fb518447cb",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "id": "64c902c3-3cbf-4f65-82d2-feb0294afcf3",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
       "text/plain": [
        "{'latitude': 40.64453,\n",
        " 'longitude': -73.94229,\n",
-       " 'generationtime_ms': 19.555091857910156,\n",
+       " 'generationtime_ms': 0.08571147918701172,\n",
        " 'utc_offset_seconds': -14400,\n",
        " 'timezone': 'America/New_York',\n",
        " 'timezone_abbreviation': 'GMT-4',\n",
@@ -41,7 +41,7 @@
        "  'weather_code': 0}}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "id": "6660e19e-5a2b-49d4-9752-86a51fde7149",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "id": "4fec2174-1c15-4c9f-b73a-98975afb0529",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "id": "292b3431-674d-4c7c-a77c-3f95646c0e0e",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "id": "ce780432-ecbf-4f49-8c21-3656242e3276",
    "metadata": {},
    "outputs": [],
@@ -97,28 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "id": "c63ade44-1443-40af-95c5-a43cda5cccaa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17.3"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "berlin_feelslike = berlin['current']['apparent_temperature']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "id": "4c87f984-b9c8-4aca-9924-5f887ab0f690",
    "metadata": {},
    "outputs": [],
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "id": "e52c81c9-1d9e-4acf-848a-6881f6e4870f",
    "metadata": {},
    "outputs": [],
@@ -141,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "id": "379a8902-01b0-4dbd-972b-4f762fe409ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Sunny'"
+       "'Cloudy'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "id": "4c00a63f-2e5b-4dee-9c34-394180c39b0f",
    "metadata": {},
    "outputs": [],
@@ -175,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "id": "85311d70-f385-451d-a665-69837ea6b48a",
    "metadata": {},
    "outputs": [],
@@ -188,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "id": "959bb4da-d728-43b9-9f77-6eef153bc51e",
    "metadata": {},
    "outputs": [],
@@ -201,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "id": "d90aa547-6e5b-4b18-9261-823f10968cad",
    "metadata": {},
    "outputs": [
@@ -241,8 +230,14 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Temperatur</td>\n",
-       "      <td>The Temperature is &lt;strong&gt;17.1&lt;strong&gt; degree...</td>\n",
-       "      <td>The Temperature is &lt;strong&gt;32.1&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;19.5&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;38.4&lt;strong&gt; degree...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>feels_like</td>\n",
+       "      <td>It feels like &lt;strong&gt;17.3&lt;strong&gt; degree Celc...</td>\n",
+       "      <td>It feels like &lt;strong&gt;41.0&lt;strong&gt; degree Celc...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -251,14 +246,16 @@
       "text/plain": [
        "        Field                                             Berlin  \\\n",
        "0       image  <span style=\"font-size:50px;\">![](http://openw...   \n",
-       "1  Temperatur  The Temperature is <strong>17.1<strong> degree...   \n",
+       "1  Temperatur  The Temperature is <strong>19.5<strong> degree...   \n",
+       "2  feels_like  It feels like <strong>17.3<strong> degree Celc...   \n",
        "\n",
        "                                            Brooklyn  \n",
        "0  <span style=\"font-size:50px;\">![](http://openw...  \n",
-       "1  The Temperature is <strong>32.1<strong> degree...  "
+       "1  The Temperature is <strong>38.4<strong> degree...  \n",
+       "2  It feels like <strong>41.0<strong> degree Celc...  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "id": "77ab535b-53c7-4be0-bd10-ef4973ffb445",
    "metadata": {},
    "outputs": [],
@@ -287,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "id": "422ce79d-e4cf-41f8-b4b9-4cb3507dda27",
    "metadata": {},
    "outputs": [
@@ -327,8 +324,14 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Temperatur</td>\n",
-       "      <td>The Temperature is &lt;strong&gt;17.5&lt;strong&gt; degree...</td>\n",
-       "      <td>The Temperature is &lt;strong&gt;31.7&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;19.5&lt;strong&gt; degree...</td>\n",
+       "      <td>The Temperature is &lt;strong&gt;38.4&lt;strong&gt; degree...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>feels_like</td>\n",
+       "      <td>It feels like &lt;strong&gt;17.3&lt;strong&gt; degree Celc...</td>\n",
+       "      <td>It feels like &lt;strong&gt;41.0&lt;strong&gt; degree Celc...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -337,21 +340,21 @@
       "text/plain": [
        "        Field                                             Berlin  \\\n",
        "0       image  <span style=\"font-size:50px;\">![](http://openw...   \n",
-       "1  Temperatur  The Temperature is <strong>17.5<strong> degree...   \n",
+       "1  Temperatur  The Temperature is <strong>19.5<strong> degree...   \n",
+       "2  feels_like  It feels like <strong>17.3<strong> degree Celc...   \n",
        "\n",
        "                                            Brooklyn  \n",
        "0  <span style=\"font-size:50px;\">![](http://openw...  \n",
-       "1  The Temperature is <strong>31.7<strong> degree...  "
+       "1  The Temperature is <strong>38.4<strong> degree...  \n",
+       "2  It feels like <strong>41.0<strong> degree Celc...  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
