project work on graphics

--- a/weather_clean_berlin.ipynb
+++ b/weather_clean_berlin.ipynb
@@ -403,7 +403,7 @@
     "    elif month in [6, 7, 8]:\n",
     "        return 'summer'\n",
     "    elif month in [9, 10, 11]:\n",
-    "        return 'autumn'\n",
+    "        return 'fall'\n",
     "\n",
     "df['season'] = df['month_num'].apply(get_season)"
    ]
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "8d9ca0b1-22d6-4c55-9541-9f703a1989be",
    "metadata": {},
    "outputs": [],
