--- a/weather_clean_brooklyn.ipynb
+++ b/weather_clean_brooklyn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "aad34839-e9d4-4f0d-b81c-fdd874f03d0d",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "ddfc41c5-af70-48b0-907e-8082605ba9e9",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "9ac97536-6aee-41a2-812e-85655c80f7b5",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "34ab3afa",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "aa5a4cf0-4d3b-4cf2-9ac1-04a4f280ef7a",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "839e5578-a478-4477-9def-f972e0d9fff6",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
        "[3654 rows x 9 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "185ac3cd-848f-4bad-8315-031a41152145",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "4946a468-a3ee-45cb-baa8-0249e41004c4",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "8effa72e-2379-4973-b5be-924f6785e3b6",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "781b29db-cf4a-47c8-8a80-388efdec47b5",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "478ce1a9-ba11-49eb-a9e5-9b1aea15c531",
    "metadata": {},
    "outputs": [],
@@ -403,14 +403,14 @@
     "    elif month in [6, 7, 8]:\n",
     "        return 'summer'\n",
     "    elif month in [9, 10, 11]:\n",
-    "        return 'autumn'\n",
+    "        return 'fall'\n",
     "\n",
     "df['season'] = df['month_num'].apply(get_season)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "c55016e4-7275-450c-a705-a9f1dac097b1",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "05db680c-0cde-4da1-a9f2-14ca964712b8",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "090d6e99-5a33-484c-b9af-27dddb802cee",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "9d74fe2e-021c-48ac-9fed-f9b3744ad1ce",
    "metadata": {},
    "outputs": [
@@ -743,7 +743,7 @@
        "[3654 rows x 14 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "8d9ca0b1-22d6-4c55-9541-9f703a1989be",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "774efbe0-f741-4427-9ecc-94669e281cee",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
        "   'image': 'http://openweathermap.org/img/wn/11n@2x.png'}}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "1a6b3977-18f1-4539-bae9-39cae4c2e155",
    "metadata": {},
    "outputs": [],
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "2cb5c7f4-66d8-46c6-8fe1-4d80bb3c1509",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
        "Name: weather_description, Length: 3654, dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "0bfb5708-5b3b-4d36-9380-a07c8b6c9527",
    "metadata": {},
    "outputs": [],
